--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -2133,7 +2133,7 @@ Handler的dispatchMessage的源码如下：
 
 　　Android提供了5种方式来让用户保存持久化应用程序数据。根据自己的需求来做选择，比如数据是否是应用程序私有的，是否能被其他程序访问，需要多少数据存储空间等，分别是：　 　　 
 
-①　使用SharedPreferences存储数据　
+①　使用**SharedPreferences（共享偏好）**存储数据　
 
 ②　文件存储数据
 
@@ -2189,7 +2189,7 @@ Context.MODE_MULTI_PROCESS
 
 　　sdk2.3后添加的选项，当多个进程同时读写同一个SharedPreferences时它会检查文件是否修改。
 
-**2.2** 　向Shared Preferences中**写入值** 　 首先要通过 SharedPreferences.Editor获取到Editor对象；
+**2.2** 　向Shared Preferences中**写入值**首先要通过 SharedPreferences.Editor获取到Editor对象；
 
 然后通过Editor的putBoolean() 或 putString()等方法存入值；
 
@@ -6455,7 +6455,7 @@ return instance;
 
 android开发经常会继承实现Activity/Fragment/View，此时如果你使用了匿名类，并被异步线程持有了，那要小心了，如果没有任何措施这样一定会导致泄露。
 
-```
+```java
     public class MainActivity extends Activity {
     ...
     Runnable ref1 = new MyRunable();
