--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -8140,6 +8140,65 @@ class Solution {
 }
 ~~~
 
+#### 12. 迷宫问题
+
+https://blog.csdn.net/qq_21201267/article/details/107215680?utm_medium=distribute.pc_aggpage_search_result.none-task-blog-2~all~first_rank_v2~rank_v25-6-107215680.nonecase&utm_term=leetcode%20%E6%89%80%E6%9C%89%E8%BF%B7%E5%AE%AB%E9%A2%98
+
+~~~java
+//迭代求法
+package leetcode.LRU;
+
+import java.util.LinkedList;
+import java.util.Queue;
+
+public class 走迷宫 {
+    public static void main(String[] args) {
+        char[][] nums=new char[][]{{'E','.','.'},
+                                    {'#','.','#'},
+                                    {'#','.','S'}} ;
+        if (helper(nums,0,0)){
+            System.out.println("TRUE");
+        }else {
+            System.out.println("NO");
+        }
+    }
+    public  static  boolean helper(char[][] nums ,int i,int j){
+        int m=nums.length;
+        int n=nums[0].length;
+        int[] start=new int[2];
+        start[0]=i;
+        start[1]=j;
+        Queue<int[]> q=new LinkedList<>();
+        q.add(start);
+        while (!q.isEmpty()){
+            i=q.peek()[0];
+            j=q.peek()[1];
+            q.poll();
+            if (nums[i][j]=='S') return true;
+            nums[i][j]='#';
+//            for(int k=0;k<4;k++){
+//                int x=i;
+//                int y=j;
+//                if (x+)
+//            }
+            //上
+            if (i-1>=0&&nums[i-1][j]!='#') q.add(new int[]{i-1,j});
+            //下
+            if (i+1<m&&nums[i+1][j]!='#') q.add(new int[]{i+1,j});
+            //左
+            if (j-1>=0&&nums[i][j-1]!='#') q.add(new int[]{i,j-1});
+            //右
+            if (j+1<m&&nums[i][j+1]!='#') q.add(new int[]{i,j+1});
+        }
+        return  false;
+    }
+}
+//递归求法
+
+~~~
+
+
+
 #### 总结
 
 1. 全排列 II	思考一下，为什么造成了重复，如何在搜索之前就判断这一支会产生重复，从而“剪枝”。
