--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -8194,7 +8194,30 @@ public class 走迷宫 {
     }
 }
 //递归求法
+    static  boolean b=false;
+    public  static  void dfs(char[][] nums ,int i,int j){
 
+        if (nums[i][j]=='S') {
+            b=true;
+            return;
+        }
+        nums[i][j]='#';
+//            for(int k=0;k<4;k++){
+//                int x=i;
+//                int y=j;
+//                if (x+)
+//            }
+            //上
+            if (i-1>=0&&nums[i-1][j]!='#') dfs(nums ,i-1,j);
+            //下
+            if (i+1<nums.length&&nums[i+1][j]!='#') dfs(nums ,i+1,j);
+            //左
+            if (j-1>=0&&nums[i][j-1]!='#') dfs(nums ,i,-1);
+            //右
+            if (j+1<nums.length&&nums[i][j+1]!='#') dfs(nums ,i,j+1);
+
+       return;
+    }
 ~~~
 
 
