--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -1032,7 +1032,19 @@ SSL中两个重要的概念是SSL会话和SSL连接，规约如下：
 >
 >数字证书解密后的证书摘要（H2）是使用上级证书的公钥来进行解密的。
 
-**可信性验证/合法性验证**：当你要验证这个数字证书可信/合法性时，你需要找到你的上一层CA认证中心的数字证书，并且从中**获取公钥**，把数据证书中的密文**F'**进行RSA解密，如果得出的值h2和h1比较（h1可以立即用数据证书中的F现场算出来），如果相等，则认为证书是可信的，合法的。
+**可信性验证/合法性验证**：
+
+数字证书使用数字签名作验证，从Firefox/IE导出的数字证书包含3个部分：证书内容(F)，加密算法(A)，F加密密文(F')，A不是一个算法，而是两个，所以密文F'是F两次加密后的结果。首先，F会被散列算法SHA1计算出hash值h1（称为128bit的摘要），然后h1会被发布这个数字签名的CA认证机构的用私钥进行RSA加密，注意：是发布这个数字签名的CA认证机构，如果现在被加密的数字证书是属于二级CA认证机构的，那么用来加密这个证书的私钥是根CA认证机构的私钥！！RAS加密完后，就形成密文F'。
+
+　　当你要验证这个数字证书可信/合法性时，你需要找到你的上一层CA认证中心的数字证书，并且从中获取公钥，把数据证书中的密文F'进行RSA解密，如果得出的值h2和h1比较（h1可以立即用数据证书中的F现场算出来），如果相等，则认为证书是可信的，合法的！由于你是不可能知道上一层CA认证中心的私钥，所以你无法伪造一个可以用上一层CA认证中心公钥解密的数字证书！！
+
+>一个数字证书包括：证书内容F，加密算法A（有两个），加密密后的密文F''
+>
+>**生成过程**：F-(签名)->F'-（上一层的私钥）->F''
+>
+>**验证过程**：F-(签名)->F'      F''-(上一层的私钥)->F'  验证F'是否相等，**使用的是签名再加密是为了性能**
+>
+>如果是假的，那么一定是被篡改了，或者证书无法获取上层的公钥。
 
 **完整性验证**：在验证可信性的过程中，h1和h2的比较，其实已经顺便验证其完整性了。
 
