--- a/面试.md
+++ b/面试.md
@@ -500,17 +500,19 @@ private static  ListNode helper(ListNode head){
 
 #### **2020.9.12 百度（一面到三面）**
 
-#### **2020.9.15 哔哩哔哩**
+#### **2020.9.15 哔哩哔哩（二面）**
 
 #### **2020.9.15 中科创达**
 
-#### **2020.9.17 跟谁学**
+#### **2020.9.17 跟谁学（二面）**
 
 #### **2020.9.17 青岛鼎信**
 
 #### **2020.9.18 网易**
 
-#### **2020.9.18 华为**
+#### **2020.9.18 华为（三面挂）**
+
+#### **2020.9.19 小红书（三面-HR面）**
 
 # 面试经验
 
