--- a/面试.md
+++ b/面试.md
@@ -496,13 +496,13 @@ private static  ListNode helper(ListNode head){
 
 #### **2020.9.8 富途**
 
-#### 2020.9.11 海康威视
+#### 2020.9.11 海康威视（二面）
 
 #### **2020.9.12 百度（一面到三面）**
 
 #### **2020.9.15 哔哩哔哩（二面）**
 
-#### **2020.9.15 中科创达**
+#### **2020.9.15 中科创达**（一面过）
 
 #### **2020.9.17 跟谁学（二面）**
 
