--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -2110,7 +2110,7 @@ class  Singleton{
         //第一层屏障，为了防止多次加锁，而造成的性能损耗
         if(instance==null){
             //step2
-            //加锁防止多线程
+            //加锁防止多线程，保证可见性
             synchronized(Singleton.class){
                 //第二层屏障，为了防止已经突破了第一层屏障位于step2位置的线程,重现创建对象
                 if(instance==null){
@@ -2201,27 +2201,42 @@ public class Singleton {
 
 3. 静态内部类【推荐】
 
+第一次加载Singleton类时并不会初始化sInstance，只有第一次调用getInstance方法时虚拟机加载SingletonHolder 并初始化sInstance ，这样不仅能确保线程安全也能保证Singleton类的唯一性，所以推荐使用静态内部类单例模式。
+
  ~~~java
 public class Singleton {
+    //声明成员变量
     private static class SingletonHolder{
         private static final Singleton INSTTANCE = new Singleton();
     }
- 
+  //私有构造方法
     private Singleton(){};
- 
+  //对外提供接口获取该实例
     public static final Singleton getInstance(){
         return SingletonHolder.INSTTANCE;
     }
 }
  ~~~
 
+4. 枚举
 
+~~~java
+public enum Singleton {  
+     INSTANCE;  
+     public void doSomeThing() {  
+     }  
+ }
+~~~
 
-![image-20200720221554779](X:\Users\xu\AppData\Roaming\Typora\typora-user-images\image-20200720221554779.png)
+默认枚举实例的创建是线程安全的，并且在任何情况下都是单例，上述讲的几种单例模式实现中，有一种情况下他们会重新创建对象，那就是反序列化，将一个单例实例对象写到磁盘再读回来，从而获得了一个实例。反序列化操作提供了readResolve方法，这个方法可以让开发人员控制对象的反序列化。在上述的几个方法示例中如果要杜绝单例对象被反序列化是重新生成对象，就必须加入如下方法：
 
-![image-20200720221611449](X:\Users\xu\AppData\Roaming\Typora\typora-user-images\image-20200720221611449.png)
+```java
+private Object readResolve() throws ObjectStreamException{
+return singleton;
+}
+```
 
-![image-20200720221656414](X:\Users\xu\AppData\Roaming\Typora\typora-user-images\image-20200720221656414.png)
+枚举单例的优点就是简单，但是大部分应用开发很少用枚举，可读性并不是很高，不建议用。
 
 
 
