--- a/面试.md
+++ b/面试.md
@@ -506,9 +506,9 @@ private static  ListNode helper(ListNode head){
 
 #### **2020.9.17 跟谁学（二面）**
 
-#### **2020.9.17 青岛鼎信**
+#### **2020.9.17 青岛鼎信**（一面）
 
-#### **2020.9.18 网易**
+#### **2020.9.18 网易**（二面）
 
 #### **2020.9.18 华为（三面）**
 
