--- a/面试.md
+++ b/面试.md
@@ -2,7 +2,7 @@
 
 # 面试经历
 
-#### 2020.7.14 远景智能
+#### 2020.7.14 远景智能（二面）
 
 **1. 面试过程**
 
@@ -67,6 +67,14 @@ Redis三种问题，如何解决
 **SQL没问**
 
 **Linux没问**
+
+**2020.8.23 远景智能二面**  
+
+1. **面试准备**
+
+2. Kafka为什么数据量多的时候会造成性能下降
+
+3. **面试总结**
 
 **2. 面试总结**
 
@@ -474,14 +482,6 @@ private static  ListNode helper(ListNode head){
 
 无
 
-#### **2020.8.23 远景智能二面**  
-
-1. **面试准备**
-
-1. Kafka为什么数据量多的时候会造成性能下降
-
-2. **面试总结**
-
 #### **2020.8.31 滴滴**  
 
 #### **2020.9.2 58同城**
@@ -498,11 +498,11 @@ private static  ListNode helper(ListNode head){
 
 #### 2020.9.11 海康威视（二面）
 
-#### **2020.9.12 百度（一面到三面）**
+#### **2020.9.12 百度（三面）**
 
 #### **2020.9.15 哔哩哔哩（二面）**
 
-#### **2020.9.15 中科创达**（一面过）
+#### **2020.9.15 中科创达**（一面-HR面）
 
 #### **2020.9.17 跟谁学（二面）**
 
@@ -513,6 +513,8 @@ private static  ListNode helper(ListNode head){
 #### **2020.9.18 华为（三面）**
 
 #### **2020.9.19 小红书（三面-HR面）**
+
+#### **2020.9.21 最右（二面）**
 
 # 面试经验
 
