--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -524,24 +524,7 @@ Collections.reverse(l);
 **代码：**
 
 ~~~java
-//**********非递归的先序遍历**********
-    //栈的思想，按层次倒着进栈，利用后进先出解决顺序问题
-    public static void iterativePreOrder_2(TreeNode p) {
-        if (p == null) return;
-        Stack<TreeNode> stack = new Stack<TreeNode>();
-        //根节点入栈
-        stack.push(p);
-        while (!stack.empty()) {
-            //出栈
-            p = stack.pop();
-            //访问
-            visit(p);
-            //由于栈是先进后出的特点，所以先进右节点以先取出左节点。
-            if (p.right != null) stack.push(p.right);
-            if (p.left != null) stack.push(p.left);
-        }
-    }
-  
+//**********非递归的先序遍历**********  
    //前序遍历手算的思想，先变访问边找，找到最左下方的，然后向上再向访问右边的
     public static void iterativePreOrder_1(TreeNode p) {
         if (p == null) return;
@@ -602,8 +585,24 @@ Collections.reverse(l);
 **拓展：**
 
 ~~~java
-
-    //**********基于前序遍历的非递归的后序遍历**********
+//**********非递归的先序遍历*************************************//  
+    //栈的思想，按层次倒着进栈，利用后进先出解决顺序问题
+    public static void iterativePreOrder_2(TreeNode p) {
+        if (p == null) return;
+        Stack<TreeNode> stack = new Stack<TreeNode>();
+        //根节点入栈
+        stack.push(p);
+        while (!stack.empty()) {
+            //出栈
+            p = stack.pop();
+            //访问
+            visit(p);
+            //由于栈是先进后出的特点，所以先进右节点以先取出左节点。
+            if (p.right != null) stack.push(p.right);
+            if (p.left != null) stack.push(p.left);
+        }
+    }   
+//**********基于前序遍历的非递归的后序遍历**********
     //栈的思想，按层次倒着进栈，利用后进先出解决顺序问题
     Collections.reverse(l);
     public static void iterativePreOrder_2(TreeNode p) {
