--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -6480,7 +6480,7 @@ public class 找出最大的k个数 {
 }
 ~~~
 
-#### 8 查找第k大的数字（快排）
+#### 8 查找第k大的数字（快排）(topK)
 
 https://blog.csdn.net/u013132035/article/details/80665655
 
